security_groups.tf
resource "aws_security_group" "webserver" {
  name = "webserver"
  description = "allows all traffic"
  vpc_id = "vpc-0ffdfdba06f19d31a"

  # Allow inbound HTTP requests
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound requests
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
